--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,21 +2,22 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def sum_two(a: int, b: int) -> int:
+def greedy_number(line:str, length: int) -> str:
     # your code here
-    return None
+    return '0'
 {% endblock start %}
 
 {% block example %}
 print('Example:')
-print(mult_two(1, 2))
+print(greedy_number("571", 2))
 {% endblock %}
 
 {% block tests %}
 {% for t in tests %}
-assert {% block call %}mult_two({{t.input.0}}, {{t.input.1}})
-{% endblock %} == {% block result %}{{t.answer}}{% endblock %}{% endfor %}
+assert {% block call %}greedy_number({{t.input.0|p}}, {{t.input.1|p}})
+{% endblock %} == {% block result %}{{t.answer|p}}{% endblock %}{% endfor %}
 {% endblock %}
+
 
 {% block final %}
 print("The first mission is done! Click 'Check' to earn cool rewards!")
