--- a/editor/initial_code/js_node.tmpl
+++ b/editor/initial_code/js_node.tmpl
@@ -2,21 +2,21 @@
 {% block env %}import assert from "assert";{% endblock env %}
 
 {% block start %}
-function sumTwo(a: number, b: number): number {
+function greedyNumber(line: String, length: number): String {
     // your code here
-    return 0;
+    return '';
 }
 {% endblock start %}
 
 {% block example %}
 console.log('Example:');
-console.log(sumTwo(3, 2));
+console.log(greedyNumber("571", 2));
 {% endblock %}
 
 // These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
-assert.strictEqual({% block call %}sumTwo({{t.input.0|j}}, {{t.input.1|j}})
+assert.strictEqual({% block call %}greedyNumber({{t.input.0|j}}, {{t.input.1|j}})
 {% endblock %}, {% block result %}{{t.answer|j}}{% endblock %});{% endfor %}
 {% endblock %}
 
